--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint:watch": "esw -w lib/**",
     "prepublish": "npm run build",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "deploy-storybook": "aws --profile keegan s3 sync storybook-static/ s3://react.keegandonley.com"
   },
   "author": "Keegan Donley",
   "license": "ISC",
